user has 3 lives to win the game

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       var dy = -2;
 
       var score = 0;
+      var lives = 3;
 
       var ballRadius = 10;
 
@@ -117,7 +118,6 @@
                 if (score == brickColumnCount * brickRowCount) {
                   alert("CONGRATULATIONS, YOU WIN");
                   document.location.reload();
-                  clearInterval(interval);
                 }
               }
             }
@@ -129,6 +129,12 @@
         ctx.font = "16px Arial";
         ctx.fillStyle = "#0095DD";
         ctx.fillText("Score: " + score, 8, 20);
+      }
+
+      function drawLives() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Lives: " + lives, canvas.width - 65, 20);
       }
 
       function drawBall() {
@@ -160,6 +166,7 @@
         collisionDetection();
         drawPaddle();
         drawScore();
+        drawLives();
 
         if (y + dy < ballRadius) {
           dy = -dy;
@@ -167,9 +174,17 @@
           if (x > paddleX && x < paddleX + paddleWidth) {
             dy = -dy;
           } else {
-            alert("GAME OVER");
-            document.location.reload();
-            clearInterval(interval);
+            lives--;
+            if (!lives) {
+              alert("GAME OVER");
+              document.location.reload();
+            } else {
+              x = canvas.width / 2;
+              y = canvas.height - 30;
+              dx = 3;
+              dy = -3;
+              paddleX = (canvas.width - paddleWidth) / 2;
+            }
           }
         }
 
@@ -191,9 +206,10 @@
 
         x += dx;
         y += dy;
+        requestAnimationForm(draw);
       }
 
-      var interval = setInterval(draw, 10);
+      draw();
 
       // ctx.beginPath();
       // ctx.rect(20, 40, 50, 50);
